sumo/tests/netconvert/import/XML/errors/broken_edge/edge#shape__false1c/errors.netconvert
Error: Attribute 'shape' in definition of a edge is not of type PositionVector.
Quitting (on error).
